2013-11-11  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java: changed the
	style to show a better face the list of events.

2013-11-08  Sergio Martin <sergio.martin@artica.es>

	* src/pandroid_event_viewer/pandorafms/EventList.java: Adapt
	the event comments to new storing format

	* res/layout/item_list_event_extended.xml: Improve event 
	comments layout to wrap the text to the container

2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java:
	fixed the validation event.

2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java,
	res/layout/create_incident.xml: fixed the popup dialog for the
	create incident.

2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable/round_event_item_grey.xml,
	res/drawable/round_event_item_blue.xml: added two lost colors,
	thanks Carla ;) .

2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values-ja/strings.xml, res/values/strings.xml,
	res/values-es/strings.xml, res/layout/main.xml: changes in the
	themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/item_list_event_extended.xml, res/layout/main.xml,
	res/layout/options.xml, res/drawable/button_pressed.9.png,
	res/drawable/pandora_button.xml, res/drawable/button_normal.9.png:
	changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/delete_pressed.png,
	res/drawable-ldpi/save_pressed.png, res/layout/main.xml,
	res/drawable/save_icon_button.xml,
	res/drawable/delete_icon_button.xml: changes in the themes. 

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml, res/drawable/combobox_pressed.9.png: changes
	in the themes.
