@@ -79,4 +79,5 @@
 	<string name="empty">- Vacia -</string>
 	<string name="timeout_connections_label_str">Tiempo de espera de las conexiones</string>
 	<string name="seconds_label_str">segundos</string>
+	<string name="text_ok_button">OK</string>
 </resources>
