@@ -96,6 +96,7 @@
     <string name="empty">- Empty -</string>
     <string name="artica_copyright">Copyright (©) 2011 Artica</string>
     <string name="dont_show_again">Don\'t show again</string>
+    <string name="text_ok_button">OK</string>
     <string name="pandorafms_logo_description">PandoraFMS\'s logo</string>
     <string name="description">Description</string>
     <string name="title">Title</string>
